# acc_dev

./: Makefile  README.md  run.sh
TrigHTT/TrigHTTBankGen/: CMakeLists.txt
TrigHTT/TrigHTTBankGen/TrigHTTBankGen/: HTTConstGenAlgo.h  HTTMatrixGenAlgo.h  HTTMatrixIO.h  HTTMatrixReductionAlgo.h  HTTPattGenDCAlgo.h  HTTPattGenTool_TI.h  HTTPattGenTool_Truth.h
TrigHTT/TrigHTTBankGen/scripts/: HTTPattGen_tf.py
TrigHTT/TrigHTTBankGen/share/: r2e_HTTBankGenITk_joboptions2.py  r2e_HTTBankGenITk_joboptions_region0_hough.py  r2e_HTTBankGenITk_joboptions_region0_ideal2.py  r2e_HTTBankGenITk_joboptions_region4.py  skeleton.HTTMatrixReduction.py  skeleton.HTTPattGen.py  skeleton.HTTPattGenDC.py  skeleton.HTTSectorRemoval.py
TrigHTT/TrigHTTBankGen/src/: HTTMatrixGenAlgo.cxx  HTTMatrixIO.cxx  HTTMatrixMergeAlgo.cxx  HTTPattGenAlgo.cxx  HTTPattGenToolI.cxx  HTTPattGenTool_TI.cxx  HTTSectorRemovalAlgo.cxx
TrigHTT/TrigHTTBankGen/test/: test_TrigHTTConstGenAlgebra.cxx  test_TrigHTTPattGen.sh
TrigHTT/TrigHTTByteStream/: CMakeLists.txt
TrigHTT/TrigHTTByteStream/TrigHTTByteStream/: TrigHTTTPByteStreamStructure_061119.h  TrigHTTTPByteStreamStructure_111119.h  TrigHTTTPByteStreamStructure_190321.h  TrigHTTTPByteStreamTool.h
TrigHTT/TrigHTTByteStream/share/: HTTByteStreamConversion_jobOptions.py  testHTTByteStreamConversionDummy.ref
TrigHTT/TrigHTTByteStream/src/: HTTByteStreamDecoderAlg.cxx  HTTByteStreamDecoderAlg.h
TrigHTT/TrigHTTByteStream/test/: test_HTTByteStreamConversion.sh
TrigHTT/TrigHTTConfig/: CMakeLists.txt
TrigHTT/TrigHTTConfig/python/: HTTAlgorithmTags.py  HTTBankTags.py  HTTConfigCompInit.py  HTTTagConfig.py  formatMessageSvc.py
TrigHTT/TrigHTTConfig/src/: HTTEventSelectionSvc.cxx  HTTEventSelectionSvc.h  HTTRegionSlices.cxx
TrigHTT/TrigHTTConfig/src/components/: TrigHTTConfig_entries.cxx
TrigHTT/TrigHTTConfig/test/: InputTestSetup.sh
TrigHTT/TrigHTTMaps/: CMakeLists.txt  README.md
TrigHTT/TrigHTTMaps/TrigHTTMaps/: HTTClusteringToolI.h  HTTPlaneMap.h  HTTRegionMap.h  HTTSectorMap.h  HTTSpacePointsTool.h  HTTSpacePointsToolI.h  HTTSpacePointsTool_v2.h  geometry_constants.h
TrigHTT/TrigHTTMaps/config/eta_patterns/: 01eta03_extra03_etapatterns_HTTlike.pat
TrigHTT/TrigHTTMaps/config/map_file/: ITk.global-to-local.moduleidmap  NN_DNN_HTTfakes_SingleP_Truth_v2.json  step3_01eta03_03phi05.pmap
TrigHTT/TrigHTTMaps/config/ss_file/: ATLAS-P2-ITK-23-00-01.ss  HTT_TestBankGen.ss  eta0709phi0305_ATLAS-P2-ITK-22-02-00.ss
TrigHTT/TrigHTTMaps/src/: HTTClusteringTool.cxx  HTTConnectionMap.cxx  HTTPlaneMap.cxx  HTTRegionMap.cxx  HTTSSMap.cxx  HTTSpacePointsTool.cxx  HTTSpacePointsTool_v2.cxx  TrigHTTMappingSvc.cxx  TrigHTTMappingSvc.h
TrigHTT/TrigHTTMaps/test/: HTTSSMap_test.cxx
TrigHTT/xAODTrigHTT/: CMakeLists.txt
TrigHTT/xAODTrigHTT/Root/: HTTTrackTestAuxContainer_v1.cxx  HTTTrackTest_v1.cxx
TrigHTT/xAODTrigHTT/Root/dict/: ContainerProxies.cxx
TrigHTT/xAODTrigHTT/xAODTrigHTT/: HTTTrackTest.h  HTTTrackTestAuxContainer.h  HTTTrackTestContainer.h  selection.xml  xAODTrigHTTDict.h
TrigHTT/xAODTrigHTT/xAODTrigHTT/versions/: HTTTrackTestAuxContainer_v1.h  HTTTrackTestContainer_v1.h  HTTTrackTest_v1.h
TrigHTTAlgorithms/: CMakeLists.txt
TrigHTTAlgorithms/TrigHTTAlgorithms/: HTTDataFlowTool.h  HTTEtaPatternFilterTool.h  HTTHough1DShiftTool.h  HTTHoughMonitorTool.h  HTTHoughRootOutputTool.h  HTTHoughTransformTool.h  HTTLLPHoughMonitorTool.h  HTTMapMakerAlg.h  HTTNNTrackTool.h  HTTOutputMonitorAlg.h  HTTOverlapRemovalValAlg.h  HTTRoadFilterToolI.h  HTTRoadFinderToolI.h  HTTRoadUnionTool.h  HTTTrackFitterTool.h
TrigHTTAlgorithms/python/: HTTAlgorithmConfig.py
TrigHTTAlgorithms/scripts/: HTTMapMakerAlg_tf.py  runTFCustom.sh
TrigHTTAlgorithms/share/: skeleton.HTTLogicalHitsToAlg.py  testLogicalHitsToAlg_SAP.ref
TrigHTTAlgorithms/src/: HTTDataFlowTool.cxx  HTTEtaPatternFilterTool.cxx  HTTExtrapolator.cxx  HTTHough1DShiftTool.cxx  HTTHoughMonitorTool.cxx  HTTHoughRootOutputTool.cxx  HTTHoughTransformTool.cxx  HTTHoughTransform_d0phi0_Tool.cxx  HTTLLPDoubletHoughTransformTool.cxx  HTTLLPHoughMonitorTool.cxx  HTTMapMakerAlg.cxx  HTTPhiRoadFilterTool.cxx  HTTRoadUnionTool.cxx  HTTTrackFitterTool.cxx
TrigHTTAlgorithms/test/: HTTPatternMatchTool_test.cxx  test_HTTORValidationAlg.sh  test_TrigHTTLogicalHitsToAlg.sh  test_TrigHTTLogicalHitsToAlg_SAP.sh  test_TrigHTTOutputMonitorAlg.sh
TrigHTTBanks/: CMakeLists.txt  README
TrigHTTBanks/TrigHTTBanks/: HTTBankMetadata.h  HTTCCachePattIO.h  HTTFitConstantBank.h  HTTSectorSlice.h
TrigHTTBanks/python/: HTTBankConfig.py
TrigHTTBanks/scripts/: HTTIndexPattMerge_tf.py
TrigHTTBanks/src/: HTTCCachePattIO.cxx  HTTPatternBank.cxx  HTTSectorSlice.cxx
TrigHTTBanks/src/components/: TrigHTTBanks_load.cxx
TrigHTTFastSim/: CMakeLists.txt
TrigHTTFastSim/TrigHTTFastSim/: HTTFastSim.h  ITrigHTTSmearingSvc.h
TrigHTTFastSim/share/: ATestRun_jobOptions.py
TrigHTTFastSim/src/: HTTFastSim.cxx
TrigHTTFastSim/src/components/: HTTFastSim_entries.cxx
TrigHTTFastSim/test/: testOutputXAOD.C
TrigHTTFastSim/testOutput/: testOutputXAOD.C  testXAOD.sh
TrigHTTInput/: CMakeLists.txt  README
TrigHTTInput/TrigHTTInput/: HTTDetectorTool.h  HTTDumpCondAlgo.h  HTTEventOutputHeaderToolI.h  HTTRawHitsWrapperAlg.h  HTTRawNtupleWrapperAlg.h  L1SimEvent.h  TrigHTTInputUtils.h
TrigHTTInput/share/: HTTDumpOutputStatAlg_jobOptions.py  HTTL1TrackSimDumper_jobOptions.py  HTTReadLogicalHitsAlg_jobOptions.py  HTTSGToLogicalHitsWrapperAlg_jobOptions.py  HTT_DetTurnOff_jobOptions.py  HTTrootcomp.py
TrigHTTInput/src/: HTTDumpCondAlgo.cxx  HTTDumpOutputStatAlg.cxx  HTTDumpOutputStatAlg.h  HTTL1SimToRawHitTool.cxx  HTTRawHitsWrapperAlg.cxx  HTTRawNtupleWrapperAlg.cxx  HTTReadLogicalHitsAlg.cxx  HTTSGToRawHitsTool.cxx  HTT_RawToLogicalHitsTool.cxx  HTT_ReadRawRandomHitsTool.cxx  L1SimFitResult.cxx  TrigHTTInputUtils.cxx
TrigHTTInput/src/components/: TrigHTTInput_entries.cxx
TrigHTTInput/test/: test_TrigHTTDumpOutputStatAlg.sh  test_TrigHTTRawToLogicalWrapperAlg.sh  test_TrigHTTSGToRawHitsWrapperAlg.sh
TrigHTTSGInput/: CMakeLists.txt
(+283 files in other folders)
